--- a/css/pts_map.css
+++ b/css/pts_map.css
@@ -68,3 +68,15 @@
     border-radius: 5px;
 }
 
+#heading{
+    font-size: 30px;
+    font-family: 14px/16px Arial, Helvetica, sans-serif;
+    z-index: 1000;
+    position: absolute;
+    width: 50%;
+    height: 8%;
+    background-color: #e6e6e6;
+    margin-left: 22%;
+    margin-top: 0.5%;
+}
+
