--- a/css/pts_map.css
+++ b/css/pts_map.css
@@ -54,29 +54,38 @@
 
 
 .leaflet-popup-content-wrapper{
-    width: 340px;
-    height: 330px;
+    width: 540px;
+    height: 750px;
 }
 
 
 
 #pics {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
     background: url(../img/loading.gif) 50% no-repeat;
     border: 1px solid black;
     border-radius: 5px;
 }
+
 
 #heading{
     font-size: 30px;
     font-family: 14px/16px Arial, Helvetica, sans-serif;
     z-index: 1000;
     position: absolute;
-    width: 50%;
+    width: 100%;
     height: 8%;
-    background-color: #e6e6e6;
-    margin-left: 22%;
-    margin-top: 0.5%;
+    background-color: #007399;
+    margin-top: 0.%;
+}
+
+#header_logo{
+    z-index: 1000;
+    position: absolute;
+    width: 4%;
+    height: 85%;
+    margin-left: 4%;
+    margin-top: 0.2%;
 }
 
